--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -158,11 +158,19 @@ $sennatechColorAlt: #B6B6B6;
   transition: 0.5s ease-in-out;
   position: relative;
 
-  @media screen and (min-width:320px) {
+  @media screen and (min-width:320px) and (max-width: 950px) {
     width: 100%;
 
-    .hoverText {
+    .hoverText{
       display: block !important;
+      position: absolute;
+      text-align: center;
+      width: 50%;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      transition: none !important;
+      filter: none !important;
     }
   }
 
