--- a/src/app/components/shared/pagination/pagination.component.html
+++ b/src/app/components/shared/pagination/pagination.component.html
@@ -1,15 +1,15 @@
 <nav aria-label="Page navigation example">
   <ul class="custom-pagination">
-    <li class="page-item">
-      <a class="page-link" href="#" aria-label="Previous">
+    <li class="page-item" [ngClass]="{ disabled: currentPage === 1 }">
+      <a class="page-link"  aria-label="Previous" (click)="onPageChanged(currentPage - 1)">
         <span aria-hidden="true">&laquo;</span>
       </a>
     </li>
-    <li class="page-item"><a class="page-link" href="#">1</a></li>
-    <li class="page-item"><a class="page-link" href="#">2</a></li>
-    <li class="page-item"><a class="page-link" href="#">3</a></li>
-    <li class="page-item">
-      <a class="page-link" href="#" aria-label="Next">
+    <li class="page-item" *ngFor="let page of getNumberOfPages()" [ngClass]="{ active: page === currentPage }">
+      <a class="page-link" (click)="onPageChanged(page)">{{ page }}</a>
+    </li>
+    <li class="page-item" [ngClass]="{ disabled: currentPage === getNumberOfPages().length }">
+      <a class="page-link" aria-label="Next" (click)="onPageChanged(currentPage + 1)">
         <span aria-hidden="true">&raquo;</span>
       </a>
     </li>
