--- a/src/app/pages/case/case.component.html
+++ b/src/app/pages/case/case.component.html
@@ -2,42 +2,40 @@
 <div class="container mt-5">
   <app-breadcrumb></app-breadcrumb>
   <div class="row">
-    <div class="col-lg-9 col-xs-12">
+    <div class="col-lg-9 col-xs-12" *ngFor="let case of currentCase">
       <div class="case">
         <h3 class="case__Title">Case de Sucesso da
-          <br/>
-          <span>Nubank</span>
+          <br />
+          <span>{{currentCase[0]?.caseSucesso}}</span>
         </h3>
         <div class="case__Partner mt-3">
-          <p class="card-partner">2023 <span>|</span> Tecnologia Parceira: Solvo</p>
+          <p class="card-partner">{{currentCase[0]?.year}} <span>|</span> Tecnologia Parceira:
+            {{currentCase[0]?.nomeParceira}}
+          </p>
         </div>
         <div class="case__Article mt-5">
 
-          <p class="case__Subtitle">Sobre o Nubank</p>
+          <p class="case__Subtitle">Sobre o {{currentCase[0]?.caseSucesso}}</p>
           <div class="case__ImgCase mb-4">
-            <img class="imgDesktop" src=" ../../../assets/images/case_Nubank.png" alt="Capa do Case Nubank">
-            <img class="imgMobile" src=" ../../../assets/images/case_Nubank_mobile.png" alt="Capa do Case Nubank Mobile">
+            <img class="imgDesktop" [src]="currentCase[0]?.img" [alt]="currentCase[0]?.alt">
+            <img class="imgMobile" [src]="currentCase[0]?.imgMobile" [alt]="currentCase[0]?.alt">
           </div>
 
           <div class="case__Text">
-            <p class="mb-3">Fundado em 2013, o Nubank foi pensado para redefinir a relação das pessoas com o dinheiro e com as instituições financeiras, através de uma experiência livre de complexidade e de burocracias. A instituição desenvolve soluções simples, seguras e 100% digitais para garantir aos clientes total controle sobre suas finanças. Também através da tecnologia, assegura eficiência no atendimento ao cliente.
-            <br><br>
-            A empresa surgiu sob a proposta de levar aos clientes acesso a serviços financeiros transparentes e justos, e é o que tem feito desde a sua criação. Com investimentos contínuos em inovação, o Nubank administra hoje mais de 7 milhões de cartões de crédito e gerencia mais de 5 milhões de contas correntes digitais, números que lhe garantem o status de maior banco digital do mundo, fora da Ásia.
+            <p class="mb-3">
+              {{currentCase[0]?.detalhes.sobre}}
             </p>
 
             <p class="case__Subtitle">Desafio</p>
 
-            <p class="mb-3">O Nubank surgiu com a proposta de simplificar os serviços financeiros e empoderar os clientes no Brasil, colocando-os no controle de suas próprias finanças. Por questões de compliance, em 2013, quando decidiu entrar no mercado, a startup tinha pouco tempo para lançar suas operações. “Precisávamos começar a operar nosso produto de cartão de crédito em menos de um ano”, lembra Renan Capaverde, líder de infraestrutura do Nubank.
-            <br><br>
-            Capaverde explica que não havia tempo hábil para desenhar e dimensionar um datacenter próprio, adquirir equipamentos e implementá-los. Além disso, a opção de ir ao mercado com uma infraestrutura física convencional implicaria riscos de investimento. "Nosso desafio era lançar o primeiro produto (cartão de crédito) em menos de um ano e então escalar a infraestrutura à medida que a empresa fosse crescendo e ampliando o portfólio", recorda. "Sabíamos que íamos crescer, mas não sabíamos exatamente quanto, nem com qual velocidade isso aconteceria. Precisávamos de uma alternativa que nos tirasse o risco do investimento para lançamento do negócio, bem como a necessidade de realizar estudos para desenhar e dimensionar uma infraestrutura física", enumera.
-            <br><br>
-            O Nubank entendeu que a melhor opção seria apostar na infraestrutura e serviços em nuvem. “Este era o meio mais eficiente e economicamente viável de chegar ao mercado com o desempenho e capacidade que um banco digital demanda, no prazo que tínhamos.” A instituição então foi ao mercado analisar as alternativas disponíveis.
+            <p class="mb-3">
+              {{currentCase[0]?.detalhes.desafio}}
+            </p>
 
             <p class="case__Subtitle">Solução</p>
 
-            <p class="mb-3">Inicialmente, a instituição contratou as ofertas de infraestrutura em cloud da Sennatech. Com o passar do tempo, no entanto, a parceria se ampliou, e os diferentes serviços desenvolvidos pela Sennatech passaram a suportar a estratégia do Nubank.
-              <br><br>
-            Atualmente, além da infraestrutura em cloud, o Nubank utiliza serviços para automação de sua infraestrutura e gestão de recursos computacionais. Para garantir a segurança em seu ambiente, o Nubank conta com a proteção contra ataques do tipo DDoS.
+            <p class="mb-3">
+              {{currentCase[0]?.detalhes.solucao}}
             </p>
 
           </div>
@@ -61,36 +59,16 @@
     </div>
     <div class="col-lg-3 col-xs-12">
       <h5 class="case__relacionados">Cases Relacionados</h5>
-      <div class="card cardCase mb-3">
+      <div class="card cardCase mb-3" *ngFor="let cases of relatedCasesList | keyvalue">
         <div class="card-body">
-          <p class="card-partner">2023 | Parceiro: Wib</p>
-          <h3 class="card-title">Case de Sucesso da Vivo</h3>
-          <a href="" class="card-link">
-            <p class="card-text mt-5">Ler Case <i class="bi bi-arrow-up-right"></i>
-            </p>
+          <p class="card-partner">{{ cases.value.year }} | Parceiro: {{ cases.value.nomeParceira }}</p>
+          <h3 class="card-title">Case de Sucesso da {{ cases.value.caseSucesso }}</h3>
+          <a (click)="goToCase(cases.value.caseSucesso)" class="card-link">
+            <p class="card-text mt-5">Ler Case <i class="bi bi-arrow-up-right"></i></p>
           </a>
         </div>
       </div>
-      <div class="card cardCase mb-3">
-        <div class="card-body">
-          <p class="card-partner">2023 | Parceiro: Wib</p>
-          <h3 class="card-title">Case de Sucesso da Ifood</h3>
-          <a href="">
-            <p class="card-text mt-5">Ler Case <i class="bi bi-arrow-up-right"></i>
-            </p>
-          </a>
-        </div>
-      </div>
-      <div class="card cardCase mb-3">
-        <div class="card-body">
-          <p class="card-partner">2023 | Parceiro: Solvo</p>
-          <h3 class="card-title">Case de Sucesso da Alelo</h3>
-          <a href="">
-            <p class="card-text mt-5">Ler Case <i class="bi bi-arrow-up-right"></i>
-            </p>
-          </a>
-        </div>
-      </div>
+
       <a href="">
         <p class="case__otherCase">Ver outros Cases</p>
       </a>
