--- a/src/app/pages/case/case.component.html
+++ b/src/app/pages/case/case.component.html
@@ -17,7 +17,7 @@
 
           <p class="case__Subtitle">Sobre o {{currentCase[0]?.caseSucesso}}</p>
           <div class="case__ImgCase mb-4">
-            <img class="imgDesktop" [src]="currentCase[0]?.img" [alt]="currentCase[0]?.alt">
+            <img class="imgDesktop" [src]="currentCase[0]?.img2" [alt]="currentCase[0]?.alt">
             <img class="imgMobile" [src]="currentCase[0]?.imgMobile" [alt]="currentCase[0]?.alt">
           </div>
 
