--- a/src/app/pages/carreira/carreira.component.html
+++ b/src/app/pages/carreira/carreira.component.html
@@ -30,6 +30,7 @@
   </div>
   <div class=" mb-5">
     <app-pagination
+      *ngIf="!isLoading"
       [lista]="vagas"
       [currentPage]="currentPage"
       (pageChanged)="pageChanged($event)"
