feat: adiciona search terms para pesquisa dentro da pagina

--- a/src/app/components/menu/menu.component.html
+++ b/src/app/components/menu/menu.component.html
@@ -10,7 +10,7 @@
   <div class=" navbar-collapse collapse menu__pages justify-content-center" id="navbarNav">
     <ul class="navbar-nav justify-content-center" *ngFor="let pagina of pagesList">
       <li class="nav-item">
-        <a class="nav-link" [routerLink]="pagina.link" routerLinkActive="active">{{pagina.text}}</a>
+        <a class="nav-link" [routerLink]="pagina.link" routerLinkActive="active">{{pagina.tittle}}</a>
       </li>
     </ul>
   </div>
