--- a/src/app/pages/error/error.component.scss
+++ b/src/app/pages/error/error.component.scss
@@ -16,12 +16,50 @@
     font-weight: 700;
     font-size: 48px;
     line-height: 120%;
-    /* identical to box height, or 58px */
-
     text-align: center;
-
-    /* Azul Escuro Sennatech */
-
     color: #001322;
+  }
+}
+
+.searchForm{
+  width: 45%;
+}
+
+::-webkit-input-placeholder{
+  font-family: 'Poppins';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 21px;
+  color: #B6B6B6;
+}
+
+.search-container {
+  position: relative;
+  display: inline-block;
+  width: 100%;
+}
+
+.search-container .search-button {
+  position: absolute;
+  top: 0;
+  right: 0;
+  padding: 6px 15px;
+  background-color: #fff;
+  border: none;
+  cursor: pointer;
+  border-bottom-right-radius: 0.375rem;
+  border-top-right-radius: 0.375rem;
+  border-top: 1px solid #ddd;
+  border-right: 1px solid #ddd;
+}
+
+@media only screen and (max-width: 768px) {
+  .search-container input[type="text"] {
+    padding-right: 15px;
+  }
+
+  .search-container .search-button {
+    padding: 3px 6px;
   }
 }
