fix: ajusta mobile pagina error

--- a/src/app/pages/error/error.component.html
+++ b/src/app/pages/error/error.component.html
@@ -1,7 +1,7 @@
 <app-menu></app-menu>
 <div class="container mt-5">
   <app-breadcrumb></app-breadcrumb>
-  <div class="error mt-5">
+  <div class="error mt-5 mb-5">
     <div class="error__title">
       <p>404</p>
     </div>
@@ -21,4 +21,4 @@
 </div>
 
 
-<app-footer style="position:absolute; bottom:0;" class="w-100"></app-footer>
+<app-footer class="w-100"></app-footer>
