--- a/src/app/pages/error/error.component.scss
+++ b/src/app/pages/error/error.component.scss
@@ -23,6 +23,10 @@
 
 .searchForm{
   width: 45%;
+
+  @media only screen and (max-width: 768px) {
+    width: 75%;
+  }
 }
 
 ::-webkit-input-placeholder{
@@ -60,6 +64,6 @@
   }
 
   .search-container .search-button {
-    padding: 3px 6px;
+    padding: 6px 8px;
   }
 }
