Ajuste dos Links e Hrefs

--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -8,26 +8,23 @@
   <section class="border-bottom">
     <div class="container text-center text-md-start mt-5">
       <div class="row mt-3">
-        <div class="col-md-3 col-lg-4 col-xl-4 mb-4">
+        <div class="col-12 col-lg-4 col-xl-4 mb-4">
           <h6 class="text-uppercase text-start fw-bold mb-4">
             <img src="../../../assets/images/sennatech_branco.png"/>
           </h6>
           <p class="footerAdress">
-            Av. Engenheiro Luís Carlos Berrini, 1748, 5º Andar, Conjunto 502-504, Cep. 04551-010.  Cidade Monções, São Paulo - SP
+            Rua Vieira de Moraes, 1111 - 2º Andar, Sala 207
+            <br>
+            CEP 04617-014 - Campo Belo, São Paulo - SP
+            <!-- Av. Engenheiro Luís Carlos Berrini, 1748, 5º Andar, Conjunto 502-504, Cep. 04551-010.  Cidade Monções, São Paulo - SP -->
           </p>
         </div>
-        <div class="col-md-4 col-lg-3 col-xl-3 ms-auto mb-md-0 mb-4 socialMedia">
+        <div class="col-12 col-lg-3 col-xl-3 ms-auto mb-lg-0 mb-4 socialMedia">
           <div class="text-lg-end iconFooter">
-            <a href="" class="me-5 text-reset">
+            <a href="https://www.linkedin.com/company/sennatech-spc-info" target="_blank" class="me-5 text-reset">
               <i class="bi bi-linkedin"></i>
             </a>
-            <a href="" class="me-5 text-reset">
-              <i class="bi bi-instagram"></i>
-            </a>
-            <a href="" class="me-5 text-reset">
-              <i class="bi bi-facebook"></i>
-            </a>
-            <a href="" class="me-4 text-reset">
+            <a href="https://api.whatsapp.com/send/?phone=5511985117466&text=Olá+estou+interessado+em+conhecer+a+Sennatech+%21+&type=phone_number&app_absent=0" target="_blank" class="me-0 text-reset">
               <i class="bi bi-whatsapp"></i>
             </a>
           </div>
