--- a/src/app/components/shared/carousel/carousel.component.html
+++ b/src/app/components/shared/carousel/carousel.component.html
@@ -20,7 +20,7 @@
         <h5 class="carousel__subTitle ">Expertise em soluções digitais que transformam negócios.</h5>
         <div class="btnDiv mx-auto my-5">
           <button class="btnDark">
-            <p class="btnText">Success Cases</p>
+            <a routerLink="/cases" class="text-decoration-none text-white"><p class="btnText">Success Cases</p></a>
           </button>
         </div>
       </div>
@@ -40,7 +40,7 @@
         <h5 class="carousel__subTitle text-center mx-auto">Expertise em soluções digitais que transformam negócios.</h5>
         <div class="btnDiv my-5">
           <button class="btnDark">
-            <p class="btnText">Acessar Case</p>
+            <a routerLink="/cases/case/Nubank" class="text-decoration-none text-white "><p class="btnText">Acessar Case</p></a>
           </button>
         </div>
       </div>
