--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -26,7 +26,7 @@
     </owl-carousel-o>
     <div class="btnDiv mx-auto my-5">
       <button class="btnLight">
-        <p class="btnText">Exibir todos</p>
+        <a routerLink="/servicos" class="text-decoration-none linkColor"><p class="btnText">Exibir todos</p></a>
       </button>
     </div>
   </div>
@@ -85,7 +85,7 @@
 </ng-template>
 <div class="btnDiv mx-auto my-5">
   <button class="btnLight btnExplore">
-    <p class="btnText exploreBtn">Explorar Cases</p>
+    <a routerLink="/cases" class="text-decoration-none linkColor"><p class="btnText exploreBtn">Explorar Cases</p></a>
   </button>
 </div>
 <!-- /SUCCESS CASE -->
