--- a/src/app/pages/vaga/vaga.component.html
+++ b/src/app/pages/vaga/vaga.component.html
@@ -31,7 +31,7 @@
             </p>
           </div>
         </div>
-        
+
         <div class="vaga__socialMedia mt-lg-5 mt-3 mb-lg-5 mb-2 ">
           <span class="me-5 itens">Compartilhar</span>
           <a href="" class="me-lg-5 me-3 text-reset">
@@ -48,7 +48,7 @@
           </a>
         </div>
         <button class="btnLight ms-lg-5 ms-0 mb-lg-0 mb-5 mt-lg-0 mt-3">
-         <a routerLink="./inscricao" class="text-decoration-none"><p class="btnText">Inscrever-se</p></a>
+         <a routerLink="./inscricao" class="text-decoration-none text-white"><p class="btnText">Inscrever-se</p></a>
         </button>
         <div class="row">
           <div class="btnDiv my-3">
