--- a/src/app/pages/cases/cases.component.html
+++ b/src/app/pages/cases/cases.component.html
@@ -8,7 +8,7 @@
   </h3>
   <div class="row mb-3">
     <div class="cases__filter">
-      <app-custom-filter></app-custom-filter>
+      <app-custom-filter (click)="orderBy($event)"></app-custom-filter>
     </div>
   </div>
   <div class="row mb-5 mt-5" *ngFor="let case of getPaginatedCases()">
@@ -17,7 +17,7 @@
     </div>
     <div class="col-6">
       <div class="case__Partner">
-        <p class="">{{case.year}} <span>|</span> Tecnologia Parceira: {{case.nomeParceira}}</p>
+        <p class="">{{case.date}} <span>|</span> Tecnologia Parceira: {{case.nomeParceira}}</p>
       </div>
       <div class="case__Title">
         <p class="">Case de Sucesso da {{case.caseSucesso}}</p>
