fix: ajusta mapa do google mobile e desk

--- a/src/app/pages/contato/contato.component.scss
+++ b/src/app/pages/contato/contato.component.scss
@@ -104,6 +104,8 @@ $sennatechColorAlt: #B6B6B6;
 }
 
 .mapsLocalization{
-  margin-top: 50px;
-  margin-bottom: 100px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 30px;
 }
