--- a/src/app/pages/cases/cases.component.html
+++ b/src/app/pages/cases/cases.component.html
@@ -12,10 +12,10 @@
     </div>
   </div>
   <div class="row mb-5 mt-5" *ngFor="let case of getPaginatedCases()">
-    <div class="col-6">
+    <div class="col-lg-6 col-12">
       <img [src]="case.img" [alt]="case.alt">
     </div>
-    <div class="col-6">
+    <div class="col-lg-6 col-12 mt-lg-0 mt-3">
       <div class="case__Partner">
         <p class="">{{case.date}} <span>|</span> Tecnologia Parceira: {{case.nomeParceira}}</p>
       </div>
