--- a/src/app/components/shared/carousel/carousel.component.html
+++ b/src/app/components/shared/carousel/carousel.component.html
@@ -5,7 +5,7 @@
     <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
   </div>
   <div class="carousel-inner">
-    <div class="carousel-item active">
+    <div class="first-item carousel-item active">
       <img src="../../../assets/images/banner.png" class="banner1-desk d-block w-100" alt="...">
       <img src="../../../../assets/images/banner1_mobile.png" class="banner1-mobile d-none w-100" alt="">
       <div class="be-box position-absolute text-start top-50 start-25 translate-middle">
@@ -25,9 +25,9 @@
       <div class="parceiros-box position-absolute text-start top-45 start-75 translate-middle">
         <h5 class="carousel__parceiros">Parceiros</h5>
         <div class="carousel__imgParceiros">
-          <img src="../../../../assets/images/solace_white.png" alt="">
-          <img src="../../../../assets/images/wib_white.png" alt="">
-          <img src="../../../../assets/images/solvo_white.png" alt="">
+          <img class="imgMobile" src="../../../../assets/images/solace_white.png" alt="">
+          <img class="imgMobile" src="../../../../assets/images/wib_white.png" alt="">
+          <img class="imgMobile" src="../../../../assets/images/solvo_white.png" alt="">
         </div>
       </div>
     </div>
