--- a/src/app/components/shared/carousel/carousel.component.scss
+++ b/src/app/components/shared/carousel/carousel.component.scss
@@ -195,6 +195,8 @@ li{
   margin-left: 10px;
   gap: 10px;
   width: 50%;
+  max-width: 100vw;
+  flex-shrink: 1;
 }
 
 .parceiros-box {
@@ -203,16 +205,65 @@ li{
   align-items: center;
   flex-direction: column;
   width: 50%;
-  left: 40%;
+  left: 65% !important;
+  max-width: 100vw;
 }
 
-@media screen and (min-width: 320px) and (max-width: 700px) {
+@media screen and (min-width: 280px) and (max-width: 700px) {
   .banner1-desk, .banner2-desk{
     display: none !important;
   }
 
   .banner1-mobile, .banner2-mobile {
     display: block !important;
+  }
+
+  .first-item {
+    display: grid !important;
+    grid-template-rows: auto auto;
+    grid-template-columns: 1fr;
+    gap: 10px;
+    justify-content: center !important;
+    align-content: center !important;
+  }
+
+  .carousel {
+    &__imgParceiros{
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      flex-wrap: wrap;
+    }
+  
+    &__title{
+      font-size: 80px !important;
+    }
+  }
+
+  .be-box {
+    grid-row: 1 / 2;
+    grid-column: 1 / 2;
+    align-self: start;
+    justify-self: center;
+    width: 100%;
+    max-width: 100vw;
+    left: 50% !important;
+    top: 30% !important;
+    flex-shrink: 1;
+  }
+
+  .parceiros-box {
+    display: inline-block;
+    grid-row: 2 / 3;
+    grid-column: 1 / 2;
+    justify-self: center;
+    align-self: end;
+    width: 100%;
+    max-width: 100vw;
+    left: 50% !important;
+    top: 30% !important;
+    height: 100vh;
+    flex-shrink: 1;
   }
 }
 
