--- a/src/app/components/menu/menu.component.html
+++ b/src/app/components/menu/menu.component.html
@@ -30,6 +30,6 @@
     </ul>
   </div>
   <div class="menu__search justify-content-center">
-    <app-search></app-search>
+    <app-search class="search"></app-search>
   </div>
 </nav>
