--- a/src/app/pages/carreira/carreira.component.html
+++ b/src/app/pages/carreira/carreira.component.html
@@ -39,7 +39,7 @@
 
   <h5 class="carreira__subTitle mt-5 mb-5">Não achou  o que procurava?
     <br/>
-    <span>Inscreva-se no <a href="#">banco de talentos</a>.</span>
+    <span>Inscreva-se no <a routerLink="/contato">banco de talentos</a>.</span>
   </h5>
 
 </div>
