--- a/src/app/pages/vaga/vaga.component.html
+++ b/src/app/pages/vaga/vaga.component.html
@@ -34,16 +34,10 @@
 
         <div class="vaga__socialMedia mt-lg-5 mt-3 mb-lg-5 mb-2 ">
           <span class="me-5 itens">Compartilhar</span>
-          <a href="" class="me-lg-5 me-3 text-reset">
+          <a href="https://www.linkedin.com/company/sennatech-spc-info" class="me-lg-5 me-3 text-reset">
             <i class="bi bi-linkedin fs-7"></i>
           </a>
-          <a href="" class="me-lg-5 me-3 text-reset">
-            <i class="bi bi-instagram fs-7"></i>
-          </a>
-          <a href="" class="me-lg-5 me-3 text-reset">
-            <i class="bi bi-facebook fs-7"></i>
-          </a>
-          <a href="" class="me-lg-4 me-3 text-reset">
+          <a href="https://api.whatsapp.com/send/?phone=5511985117466&text=Olá+estou+interessado+em+conhecer+a+Sennatech+%21+&type=phone_number&app_absent=0" class="me-lg-4 me-3 text-reset">
             <i class="bi bi-whatsapp fs-7"></i>
           </a>
         </div>
