--- a/src/app/components/menu/menu.component.scss
+++ b/src/app/components/menu/menu.component.scss
@@ -8,6 +8,14 @@
 
 }
 
+.search{
+  // display: block;
+
+  // @media (max-width: 575.98px) {
+  //   display: none;
+  //  }
+}
+
 .pages{
   flex: 30;
   text-align: center;
